--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "ui",
   "version": "0.1.0",
+  "homepage": "http://maracuja-juice.github.io/ultimate-tic-tac-react",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.1",
-    "history": "^4.7.2",
     "material-design-icons": "^3.0.1",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "react-tooltip": "^3.4.0",
     "redux": "^3.7.2",
-    "redux-batched-actions": "^0.2.1",
-    "redux-logger": "^3.0.6"
+    "redux-batched-actions": "^0.2.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "storybook": "start-storybook -p 6006",
@@ -42,10 +43,13 @@
     "@types/storybook__addon-knobs": "^3.2.1",
     "@types/storybook__addon-links": "^3.0.2",
     "@types/storybook__react": "^3.0.5",
+    "@types/react-dom": "^16.0.4",
     "babel-core": "^6.26.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "gh-pages": "^1.1.0",
     "jest-junit-reporter": "^1.1.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
     "typescript": "^2.7.1"
   }
 }
