--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-scripts-ts": "2.13.0",
     "react-tooltip": "^3.4.0",
     "redux": "^3.7.2",
-    "redux-batched-actions": "^0.2.1",
-    "yarn": "^1.3.2"
+    "redux-batched-actions": "^0.2.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
