--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/jest": "^22.1.2",
     "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.14",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.5",
@@ -43,8 +44,8 @@
     "@types/storybook__addon-knobs": "^3.2.1",
     "@types/storybook__addon-links": "^3.0.2",
     "@types/storybook__react": "^3.0.5",
-    "@types/react-dom": "^16.0.4",
     "babel-core": "^6.26.0",
+    "coveralls": "^3.0.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "gh-pages": "^1.1.0",
     "jest-junit-reporter": "^1.1.0",
