--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: node_js
 node_js:
   - "stable"
-after_script: "jest --coverage && cat ./coverage/lcov.info | coveralls"
+after_script: "yarn test --coverage"
