--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
 language: node_js
 node_js:
   - "stable"
+cache:
+  directories:
+  - node_modules
 after_script: "yarn test --coverage | coveralls"
+script:
+  - npm run build
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $github_token
+  local_dir: build
+  on:
+    branch: master
+notifications:
+  email: false
