--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,18 @@ node_js:
 cache:
   directories:
   - node_modules
-after_script: "yarn test --coverage | coveralls"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
+  - npm install codecov -g
+  - npm test
   - npm run build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+after_success:
+  - codecov
 deploy:
   provider: pages
   skip_cleanup: true
