--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
-    "enzyme": "^3.3.0",
-    "enzyme-to-json": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -45,10 +43,12 @@
     "@types/storybook__addon-links": "^3.0.2",
     "@types/storybook__react": "^3.0.5",
     "babel-core": "^6.26.0",
-    "coveralls": "^3.0.0",
+    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "gh-pages": "^1.1.0",
     "jest-junit-reporter": "^1.1.0",
+    "jsdom": "^11.6.2",
+    "jsdom-global": "^3.0.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "typescript": "^2.7.1"
