--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.14",
     "@storybook/addon-links": "^3.3.14",
+    "@storybook/addon-knobs": "^3.2.14",
     "@storybook/addons": "^3.3.14",
     "@storybook/react": "^3.3.14",
     "@types/classnames": "^2.2.3",
