--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,4 @@ deploy:
     branch: master
 notifications:
   email: false
-  webhooks: https://www.travisbuddy.com/
-  on_success: never
+  webhooks: https://www.travisbuddy.com/?insert=update
