webhook of travis buddy was misconfigured

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ deploy:
     branch: master
 notifications:
   email: false
-  webhooks: https://www.travisbuddy.com/?insert=update
+  webhooks: https://www.travisbuddy.com/?insertMode=update
