--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
       "!src/**/*.story.{js,jsx,ts,tsx}",
       "!src/index.{ts,tsx}",
       "!src/**/*Mock.{ts,tsx}",
-      "!src/registerServiceWorker.{ts,tsx}"
+      "!src/registerServiceWorker.{ts,tsx}",
+      "!src/state/configureStore.ts"
     ]
   },
   "devDependencies": {
