--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-design-icons": "^3.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-dom-confetti": "^0.0.8",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.14.0",
     "redux": "^3.7.2",
@@ -62,7 +63,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-saga-test-plan": "^3.5.1",
-    "typescript": "^2.7.1",
-    "ts-jest": "22.4.2"
+    "ts-jest": "22.4.2",
+    "typescript": "^2.7.1"
   }
 }
