--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-github-corner": "^2.1.0",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.15.1",
     "redux": "^3.7.2",
@@ -61,7 +62,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-saga-test-plan": "^3.5.1",
-    "typescript": "^2.7.1",
-    "ts-jest": "22.4.2"
+    "ts-jest": "22.4.2",
+    "typescript": "^2.7.1"
   }
 }
