add why-did-you update library

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "classnames": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-github-corner": "^2.3.0",
     "react-dom-confetti": "^0.0.8",
+    "react-github-corner": "^2.3.0",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.15.1",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "why-did-you-update": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
