--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "material-ui": "^1.0.0-beta.41",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-github-corner": "^2.3.0",
     "react-dom-confetti": "^0.0.8",
+    "react-github-corner": "^2.3.0",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.15.1",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts-ts start",
