--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
-    "material-ui": "^1.0.0-beta.41",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-dom-confetti": "^0.0.8",
@@ -14,7 +13,7 @@
     "react-scripts-ts": "2.15.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
-    "typeface-roboto": "^0.0.54"
+    "rmwc": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts-ts start",
