--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "react-dom": "^16.2.0",
     "react-github-corner": "^2.3.0",
     "react-redux": "^5.0.6",
-    "react-scripts-ts": "2.15.1",
+    "react-scripts-ts": "^2.17.0",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
-    "rmwc": "^1.5.4"
+    "rmwc": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -42,11 +42,11 @@
     "@types/classnames": "^2.2.3",
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/jest": "^22.1.2",
-    "@types/node": "^9.6.7",
+    "@types/jest": "^23.3.2",
+    "@types/node": "^10.10.2",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
-    "@types/react-redux": "^5.0.14",
+    "@types/react-redux": "^6.0.9",
     "@types/redux-logger": "^3.0.5",
     "@types/storybook__addon-actions": "^3.0.1",
     "@types/storybook__addon-knobs": "^3.2.1",
@@ -54,14 +54,13 @@
     "@types/storybook__react": "^3.0.5",
     "babel-core": "^6.26.0",
     "coveralls": "^3.0.0",
-    "enzyme": "^3.3.0",
+    "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "gh-pages": "^1.1.0",
     "jest-junit-reporter": "^1.1.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-saga-test-plan": "^3.5.1",
-    "ts-jest": "22.4.4",
+    "ts-jest": "23.10.1",
     "typescript": "^2.7.1"
   }
 }
