--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts-ts": "^3.1.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
+    "reselect": "^4.0.0",
     "rmwc": "^3.0.5"
   },
   "scripts": {
