--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "classnames": "^2.2.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-github-corner": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "^3.1.0",
@@ -49,6 +51,8 @@
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
     "@types/react-redux": "^6.0.9",
     "@types/redux-logger": "^3.0.6",
     "@types/storybook__addon-actions": "^3.4.1",
