--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "immer": "^2.1.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-github-corner": "^2.3.0",
