--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "immer": "^2.1.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
     "react-github-corner": "^2.3.0",
     "react-redux": "^6.0.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^3.1.0",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
@@ -48,13 +48,14 @@
     "@types/classnames": "^2.2.7",
     "@types/enzyme": "^3.9.0",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/hoist-non-react-statics": "^3.3.0",
     "@types/jest": "^24.0.6",
     "@types/node": "^11.10.4",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
+    "@types/react-redux": "^7.0.5",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react-redux": "^7.0.2",
     "@types/redux-logger": "^3.0.6",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-knobs": "^4.0.4",
@@ -64,6 +65,7 @@
     "coveralls": "^3.0.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "hoist-non-react-statics": "^3.3.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-saga-test-plan": "^3.7.0",
