--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "react-scripts-ts test --env=jsdom --coverage",
     "test:watch": "react-scripts-ts test --watch",
     "eject": "react-scripts-ts eject",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006",
+    "prettify": "prettier --write \"./src/**/*.*(ts|tsx)\""
   },
   "jest": {
     "collectCoverageFrom": [
@@ -66,6 +67,7 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "hoist-non-react-statics": "^3.3.0",
+    "prettier": "^1.16.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-saga-test-plan": "^3.7.0",
