--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:watch": "react-scripts-ts test --watch",
     "eject": "react-scripts-ts eject",
     "storybook": "start-storybook -p 6006",
-    "prettify": "prettier --write \"./src/**/*.*(ts|tsx)\""
+    "prettier": "prettier --write \"./src/**/*.*(ts|tsx)\""
   },
   "jest": {
     "collectCoverageFrom": [
