--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^3.1.0",
+    "react-scroll": "^1.7.11",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.2",
@@ -56,6 +57,7 @@
     "@types/react-redux": "^7.0.5",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-scroll": "^1.5.4",
     "@types/redux-logger": "^3.0.6",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-knobs": "^4.0.4",
