--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "immer": "^2.1.3",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -52,8 +52,8 @@
     "@types/hoist-non-react-statics": "^3.3.0",
     "@types/jest": "^24.0.6",
     "@types/node": "^11.10.4",
-    "@types/react": "^16.8.6",
-    "@types/react-dom": "^16.8.2",
+    "@types/react": "^16.8.12",
+    "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
@@ -66,7 +66,7 @@
     "babel-loader": "^8.0.5",
     "coveralls": "^3.0.3",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "1.11.2",
+    "enzyme-adapter-react-16": "^1.12.1",
     "hoist-non-react-statics": "^3.3.0",
     "prettier": "^1.16.4",
     "redux-devtools-extension": "^2.13.8",
