--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts-ts": "^3.1.0",
+    "react-scripts": "^2.1.8",
     "react-scroll": "^1.7.11",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.2",
     "reselect": "^4.0.0",
-    "rmwc": "^5.3.1"
+    "rmwc": "^5.3.1",
+    "typescript": "^3.4.3"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom --coverage",
-    "test:watch": "react-scripts-ts test --watch",
-    "eject": "react-scripts-ts eject",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom --coverage",
+    "test:watch": "react-scripts test --env=jsdom --watch",
     "storybook": "start-storybook -p 6006",
     "prettier": "prettier --write \"./src/**/*.*(ts|tsx)\""
   },
@@ -50,10 +50,10 @@
     "@types/enzyme": "^3.9.0",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/hoist-non-react-statics": "^3.3.0",
-    "@types/jest": "^24.0.6",
-    "@types/node": "^11.10.4",
-    "@types/react": "^16.8.12",
-    "@types/react-dom": "^16.8.3",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.4",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.6",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.2",
@@ -64,7 +64,6 @@
     "@types/storybook__addon-links": "^3.3.4",
     "@types/storybook__react": "^4.0.1",
     "babel-loader": "^8.0.5",
-    "coveralls": "^3.0.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "hoist-non-react-statics": "^3.3.0",
@@ -72,7 +71,12 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-saga-test-plan": "^3.7.0",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.2.4"
-  }
+    "ts-loader": "^5.3.3"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
