upgrade to CRA3 beta

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "3.0.0-next.68",
     "react-scroll": "^1.7.11",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
@@ -73,10 +73,17 @@
     "redux-saga-test-plan": "^3.7.0",
     "ts-loader": "^5.3.3"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all",
+      "not ie <= 11"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
