--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "!src/**/*.story.{js,jsx,ts,tsx}",
       "!src/index.{ts,tsx}",
       "!src/**/*Mock.{ts,tsx}",
-      "!src/registerServiceWorker.{ts,tsx}",
+      "!src/serviceWorker.ts",
       "!src/state/configureStore.ts"
     ]
   },
