--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test --env=jsdom --coverage",
     "test:all": "react-scripts test --env=jsdom --coverage --watchAll=false",
     "storybook": "start-storybook -p 6006",
-    "prettier": "prettier --write \"./src/**/*.*(ts|tsx)\""
+    "prettier": "prettier --write \"./src/**/*.*(ts|tsx|css)\""
   },
   "jest": {
     "snapshotSerializers": [
