--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
-    "date-fns": "^2.0.0-alpha.27",
+    "date-fns": "^2.15.0",
     "immer": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
