--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "immer": "^7.0.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.2",
+    "react-redux": "^7.2.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.11",
-    "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
-    "redux-saga": "^1.0.2",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "rmwc": "^6.1.3",
     "typescript": "^3.4.3"
@@ -60,11 +60,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.6",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.2",
     "@types/react-scroll": "^1.5.4",
-    "@types/redux-logger": "^3.0.6",
+    "@types/redux-logger": "^3.0.8",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-backgrounds": "^4.1.1",
     "@types/storybook__addon-knobs": "^5.0.0",
@@ -80,7 +80,7 @@
     "prettier": "^1.16.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-saga-test-plan": "^4.0.0-beta.3",
+    "redux-saga-test-plan": "^4.0.0-rc.3",
     "ts-loader": "^5.3.3"
   },
   "browserslist": {
