--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
-    "@storybook/addon-actions": "^5.0.10",
-    "@storybook/addon-backgrounds": "^5.0.10",
-    "@storybook/addon-knobs": "^5.0.10",
-    "@storybook/addon-links": "^5.0.10",
-    "@storybook/addon-viewport": "^5.0.10",
-    "@storybook/addons": "^5.0.10",
-    "@storybook/react": "^5.0.10",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-backgrounds": "^6.0.21",
+    "@storybook/addon-knobs": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/addon-viewport": "^6.0.21",
+    "@storybook/addons": "^6.0.21",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.21",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -65,14 +66,6 @@
     "@types/react-router-dom": "^4.3.2",
     "@types/react-scroll": "^1.8.0",
     "@types/redux-logger": "^3.0.8",
-    "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__addon-backgrounds": "^4.1.1",
-    "@types/storybook__addon-knobs": "^5.0.0",
-    "@types/storybook__addon-links": "^3.3.4",
-    "@types/storybook__addon-viewport": "^4.1.0",
-    "@types/storybook__react": "^4.0.1",
-    "babel-loader": "^8.1.0",
-    "babel-preset-react-app": "9.1.2",
     "enzyme": "^3.11",
     "enzyme-adapter-react-16": "^1.15.3",
     "enzyme-to-json": "^3.5.0",
@@ -80,8 +73,7 @@
     "prettier": "^2.1.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-saga-test-plan": "^4.0.0-rc.3",
-    "ts-loader": "^8.0.3"
+    "redux-saga-test-plan": "^4.0.0-rc.3"
   },
   "browserslist": {
     "production": [
@@ -95,8 +87,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "babel-preset-react-app": "7.0.0"
   }
 }
