--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
-    "date-fns": "^2.15.0",
-    "immer": "^3.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.2",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
-    "react-scroll": "^1.7.11",
-    "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
-    "redux-saga": "^1.0.2",
+    "date-fns": "^2.16.0",
+    "immer": "^7.0.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "rmwc": "^5.3.1",
-    "typescript": "^3.4.3"
+    "rmwc": "^6.1.3",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,44 +44,34 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@storybook/addon-actions": "^5.0.10",
-    "@storybook/addon-backgrounds": "^5.0.10",
-    "@storybook/addon-knobs": "^5.0.10",
-    "@storybook/addon-links": "^5.0.10",
-    "@storybook/addon-viewport": "^5.0.10",
-    "@storybook/addons": "^5.0.10",
-    "@storybook/react": "^5.0.10",
-    "@types/classnames": "^2.2.7",
-    "@types/enzyme": "^3.9.0",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/hoist-non-react-statics": "^3.3.0",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.6",
+    "@babel/core": "^7.11.4",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-backgrounds": "^6.0.21",
+    "@storybook/addon-knobs": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/addon-viewport": "^6.0.21",
+    "@storybook/addons": "^6.0.21",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.21",
+    "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.1",
+    "@types/react": "^16.9.48",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.2",
-    "@types/react-scroll": "^1.5.4",
-    "@types/redux-logger": "^3.0.6",
-    "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__addon-backgrounds": "^4.1.1",
-    "@types/storybook__addon-knobs": "^5.0.0",
-    "@types/storybook__addon-links": "^3.3.4",
-    "@types/storybook__addon-viewport": "^4.1.0",
-    "@types/storybook__react": "^4.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-preset-react-app": "7.0.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "enzyme-to-json": "^3.3.5",
-    "hoist-non-react-statics": "^3.3.0",
-    "prettier": "^1.16.4",
+    "@types/react-scroll": "^1.8.0",
+    "@types/redux-logger": "^3.0.8",
+    "enzyme": "^3.11",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "enzyme-to-json": "^3.5.0",
+    "prettier": "^2.1.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-saga-test-plan": "^4.0.0-beta.3",
-    "ts-loader": "^5.3.3"
+    "redux-saga-test-plan": "^4.0.0-rc.3"
   },
   "browserslist": {
     "production": [
@@ -95,8 +85,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "babel-preset-react-app": "7.0.0"
   }
 }
