--- a/package.json
+++ b/package.json
@@ -45,12 +45,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-backgrounds": "^6.0.21",
-    "@storybook/addon-knobs": "^6.0.21",
+    "@storybook/addon-essentials": "^6.0.21",
     "@storybook/addon-links": "^6.0.21",
-    "@storybook/addon-viewport": "^6.0.21",
-    "@storybook/addons": "^6.0.21",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.21",
     "@types/classnames": "^2.2.10",
@@ -65,6 +61,7 @@
     "@types/react-router-dom": "^4.3.2",
     "@types/react-scroll": "^1.8.0",
     "@types/redux-logger": "^3.0.8",
+    "babel-loader": "^8.1.0",
     "enzyme": "^3.11",
     "enzyme-adapter-react-16": "^1.15.3",
     "enzyme-to-json": "^3.5.0",
