--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "immer": "^7.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -22,6 +23,7 @@
     "typescript": "^4.0.2"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --coverage",
@@ -68,7 +70,8 @@
     "prettier": "^2.1.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-saga-test-plan": "^4.0.0-rc.3"
+    "redux-saga-test-plan": "^4.0.0-rc.3",
+    "source-map-explorer": "^2.5.2"
   },
   "browserslist": {
     "production": [
