--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 # Created by https://www.gitignore.io/api/node,jetbrains,visualstudiocode
 
