add interactive yarn plugin
use with: yarn upgrade-interactive

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,9 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
-npmRegistryServer: "https://registry.yarnpkg.com"
 nodeLinker: node-modules
 
+npmRegistryServer: "https://registry.yarnpkg.com"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
+yarnPath: .yarn/releases/yarn-berry.cjs
