--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: run Lighthouse CI
       run: |
-        yarn install -g @lhci/cli@0.8.x
+        yarn global add @lhci/cli@0.8.x
         lhci autorun
       env:
         LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
