--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,6 @@ jobs:
     - name: run Lighthouse CI
       run: |
         npm install -g @lhci/cli@0.8.x
-        lhci autorun
+        lhci autorun --rc-overrides.upload.target=temporary-public-storage
       env:
         LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
