--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,11 @@ jobs:
     - run: yarn test
 
     - run: yarn build
+    
+    - name: run Lighthouse CI
+      run: |
+        npm install -g @lhci/cli@0.8.x
+        lhci autorun
+      env:
+        LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+
