--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "@types/classnames": "^2.3.1",
+    "@types/cypress-image-snapshot": "^3.1.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "@types/react": "^16.9.56",
@@ -58,6 +59,7 @@
     "@types/react-scroll": "^1.8.2",
     "@types/redux-logger": "^3.0.8",
     "cypress": "^7.5.0",
+    "cypress-image-snapshot": "^4.0.1",
     "html-webpack-plugin": "4",
     "msw": "^0.29.0",
     "prettier": "^2.3.1",
