--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 cypress/screenshots/*
 cypress/**/*.diff.*
+cypress/videos/*
 
 # Created by https://www.gitignore.io/api/node,jetbrains,visualstudiocode
 
