--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "3.4.4",
     "react-scroll": "^1.8.2",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
@@ -27,10 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "test:int": "cypress open",
-    "cypress:e2e": "cypress open",
-    "cypress:ct": "cypress open-ct",
-    "test:all": "react-scripts test --env=jsdom --watchAll=false",
+    "test:int": "sh ./cypress/test.sh",
+    "test:all": "react-scripts test --env=jsdom --watchAll=false && yarn test:int",
+    "cypress:open": "cypress open",
     "storybook": "start-storybook -p 6006",
     "prettier": "prettier --write \"./src/**/*.*(ts|tsx|css)\""
   },
@@ -60,7 +59,6 @@
     "@types/redux-logger": "^3.0.8",
     "cypress": "^7.5.0",
     "cypress-image-snapshot": "^4.0.1",
-    "html-webpack-plugin": "4",
     "msw": "^0.29.0",
     "prettier": "^2.3.1",
     "redux-devtools-extension": "^2.13.9",
