--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,16 @@ jobs:
         lhci autorun
       env:
         LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-    
+        
+    - run: yarn build
+
+    - name: Save build folder
+      uses: actions/upload-artifact@v2
+      with:
+        name: build
+        if-no-files-found: error
+        path: build
+
   install-cypress:
     runs-on: ubuntu-latest
     container: cypress/browsers:node14.15.0-chrome86-ff82
@@ -60,21 +69,12 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           runTests: false
-          
-      - run: yarn build
-
-      - name: Save build folder
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          if-no-files-found: error
-          path: build    
         
   ui-chrome-tests:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     container: cypress/browsers:node14.15.0-chrome86-ff82
-    needs: install-cypress
+    needs: [install-cypress, build]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
