--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,6 @@ jobs:
 
     - run: yarn test
 
-    - name: run Lighthouse CI
-      run: |
-        npm install -g @lhci/cli@0.8.x
-        lhci autorun
-      env:
-        LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-        
     - run: yarn build
 
     - name: Save build folder
@@ -57,6 +50,30 @@ jobs:
         name: build
         if-no-files-found: error
         path: build
+
+  lhci:
+    name: Lighthouse
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+
+      - name: Download the build folders
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: build
+  
+      - name: run Lighthouse CI
+        run: |
+          npm install -g @lhci/cli@0.8.x
+          lhci autorun
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
   install-cypress:
     runs-on: ubuntu-latest
