--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,12 +55,18 @@ jobs:
     name: Lighthouse
     runs-on: ubuntu-latest
     needs: build
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 14.x
-        uses: actions/setup-node@v1
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: ${{ matrix.node-version }}
 
       - name: Download the build folders
         uses: actions/download-artifact@v2
@@ -102,11 +108,14 @@ jobs:
           name: build
           path: build
 
+      - name: Install Serve Package
+        run: npm install -g serve
+
       - name: "UI Tests - Chrome 🧪"
         uses: cypress-io/github-action@v2
         with:
           install: false
-          start: yarn start
+          start: serve build
           wait-on: "http://localhost:3000"
           wait-on-timeout: 120
           browser: chrome
