--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,10 +98,19 @@ jobs:
   chrome:
     name: Try out simple
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [ 14.x ]
+        
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-        
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
 
       - name: Install Serve Package
         run: npm install -g serve
