--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Increase File Watchers 🔭
-        run: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
+        # run: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
+        run: | 
+          man mkdir
+          man sudo
 
       - name: Download the build folders ⏬
         uses: actions/download-artifact@v2
