--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,7 +124,7 @@ jobs:
           record: true
           # Use custom script for "cypress run-ct" so that browser var can be supplied easily
           # Use Long Polling because of max file-watchers: https://github.com/cypress-io/github-action/issues/317
-          command: CHOKIDAR_USEPOLLING=1 yarn test:int --ct -v --browser chrome
+          command: yarn test:int --ct -v --browser chrome
           
       - name: Upload Screenshots 📸
         uses: actions/upload-artifact@v1
