need sudo without docker

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,7 +100,7 @@ jobs:
           path: build
 
       - name: Install Serve Package 🍲
-        run: npm install -g serve
+        run: sudo npm install -g serve
 
       - name: "Chrome 🕹️"
         uses: cypress-io/github-action@v2
