--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,7 +125,7 @@ jobs:
           start: CHOKIDAR_USEPOLLING=1
           # Use custom script for "cypress run-ct" so that browser var can be supplied easily
           # Use Long Polling because of max file-watchers: https://github.com/cypress-io/github-action/issues/317
-          command: CHOKIDAR_USEPOLLING=1 && yarn test:int --ct -v --browser chrome
+          command: yarn test:int --ct -v --browser chrome
         
       - run: tree cypress
 
